fix: form grid aligns items vertically to the top (#2371)
BREAKING CHANGE:

added a new modifier class to fd-row to achieve even alignment of its elements:fd-row--top in a form.
Before:
<div class="fd-row">
After:
<div class="fd-row fd-row--top">

--- a/src/form-layout-grid.scss
+++ b/src/form-layout-grid.scss
@@ -35,6 +35,10 @@ $cols: 11;
       margin-top: 0;
       margin-bottom: 0.625rem;
 
+      &--top {
+        align-items: start;
+      }
+
       .#{$blockCol} {
         padding: 0 0.25rem;
         overflow: hidden;
